# DCL_BayesNetwork

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  dev-session.sh  install_dependencies.sh  install_discode.sh  todo.md
cmake/: C++11Compiling.cmake  Coverage.cmake  DefaultBuildType.cmake  GoogleMock.cmake  TestSuite.cmake
data/: experiments.txt  test_instance_cloud_xyzsift.pcd
data/SimpleObjects/: base_sift.pcd  object_0.json  object_0_xyzrgb.pcd  object_1.json  object_2.json  object_2_xyzrgb.pcd  object_3.json  object_4.json
data/model_1/: model.pcd  model_1_base.pcd  view_1.pcd  view_10.pcd  view_1b.pcd  view_2.pcd  view_2b.pcd  view_3.pcd  view_3b.pcd  view_4.pcd  view_4b.pcd  view_5.pcd  view_5b.pcd  view_6.pcd  view_7.pcd  view_8.pcd  view_9.pcd
data/model_2/: model.pcd  model_2_base.pcd  view_1.pcd  view_2.pcd  view_3.pcd  view_4.pcd  view_5.pcd
data/model_3/: model.pcd  model_3_base.pcd  view_1.pcd  view_2.pcd  view_3.pcd  view_4.pcd  view_5.pcd
data/model_4/: model.pcd  model_4_base.pcd  view_1.pcd  (+4 more)
src/: BayesNetworkConfig.cmake.in  CMakeLists.txt  MSConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/BayesNetworkSink/: BayesNetworkSink.cpp  BayesNetworkSink.hpp  CMakeLists.txt
src/Components/CreateNetwork/: BayesNetwork.cpp  BayesNetwork.hpp  CMakeLists.txt  CreateNetwork.cpp  CreateNetwork.hpp
src/Components/CreateNetwork2/: CMakeLists.txt
src/Components/CreateNetworkSHOT/: CMakeLists.txt  CreateNetworkSHOT.cpp  CreateNetworkSHOT.hpp
src/Components/CreateNetworkWithSpacialDependencies/: BayesNetwork.cpp  BayesNetwork.hpp  BayesNetworkNode.cpp  BayesNetworkNode.hpp  CMakeLists.txt  CreateNetwork.cpp  CreateNetworkWithSpacialDependencies.cpp  CreateNetworkWithSpacialDependencies.hpp  Octree.cpp  Octree.hpp  OctreeBranchNode.cpp  OctreeBranchNode.hpp  OctreeLeafNode.cpp  OctreeLeafNode.hpp  OctreeNode.cpp  OctreeNode.hpp
src/Components/MapMultiplicity/: CMakeLists.txt  MapMultiplicity.cpp  MapMultiplicity.hpp
src/Components/MockAdder/: CMakeLists.txt  MockAdder.cpp  MockAdder.hpp
src/Components/MockEvaluator/: CMakeLists.txt  MockEvaluator.cpp  MockEvaluator.hpp
src/Components/MockFeatureMatcher/: CMakeLists.txt  MockFeatureMatcher.cpp  MockFeatureMatcher.hpp
src/Components/MockMultiplicityMapper/: CMakeLists.txt  MockMultiplicityMapper.cpp  MockMultiplicityMapper.hpp
src/Components/MockNetworkBuilder/: BayesNetwork.cpp  BayesNetwork.hpp  CMakeLists.txt  MockNetworkBuilder.cpp  MockNetworkBuilder.hpp
src/Components/MultipleModels/: CMakeLists.txt  MultipleModels.cpp  MultipleModels.hpp
src/Components/NetworkBuilder/: AbstractNetwork.hpp  BayesNetwork.cpp  BayesNetwork.hpp  BayesNetworkExceptions.hpp  BayesNetworkNode.cpp  BayesNetworkNode.hpp  CMakeLists.txt  CPTManager.cpp  CPTManager.hpp  CPTManagerExceptions.hpp  NetworkBuilder.cpp  NetworkBuilder.hpp  NetworkBuilderExceptions.hpp  Octree.cpp  Octree.hpp  OctreeBranchNode.cpp  OctreeNode.hpp
src/Components/NetworkTester/: CMakeLists.txt  NetworkTester.cpp  NetworkTester.hpp
src/Components/OctreeBuilder/: CMakeLists.txt  OctreeBuilder.cpp  OctreeBuilder.hpp
src/Components/OctreeGenerator/: CMakeLists.txt  OctreeGenerator.cpp  OctreeGenerator.hpp
src/Components/PCDReader/: CMakeLists.txt  PCDReader.cpp  PCDReader.hpp
src/Components/PointCloudIndexer/: CMakeLists.txt  PointCloudIndexer.cpp  PointCloudIndexer.hpp
src/Components/SIFTAdder/: CMakeLists.txt  SIFTAdder.cpp  SIFTAdder.hpp
src/Components/SIFTFeatureMatcher/: CMakeLists.txt  SIFTFeatureMatcher.cpp  SIFTFeatureMatcher.hpp
src/Components/SOMEvaluation/: CMakeLists.txt  SOMEvaluation.cpp  SOMEvaluation.hpp
src/Components/SOMJSONReader/: CMakeLists.txt  SOMJSONReader.cpp  SOMJSONReader.hpp
src/Components/SOMSimpleEvaluation/: CMakeLists.txt  SOMSimpleEvaluation.cpp  SOMSimpleEvaluation.hpp
src/Components/TestNetwork/: CMakeLists.txt  TestNetwork.cpp  TestNetwork.hpp
src/Components/UpdateNetwork/: CMakeLists.txt  UpdateNetwork.cpp  UpdateNetwork.hpp
src/Components/tests/: CMakeLists.txt  CreateNetworkTest.cpp
src/Types/: AbstractObject.hpp  AbstractObjectFactory.hpp  AbstractOctree.hpp  AbstractOctreeIterator.hpp  BayesNetwork.cpp  BayesNetwork.hpp  BayesNetworkExceptions.hpp  BayesNetworkNode.cpp  CMakeLists.txt  CPTManager.cpp  CPTManager.hpp  CPTManagerExceptions.hpp  DefaultSIFTPointRepresentation.hpp  DepthFirstIterator.cpp  DepthFirstIterator.hpp  Octree.cpp  Octree.hpp  OctreeBranchNode.cpp  OctreeBranchNode.hpp  OctreeContainers.hpp  OctreeLeafNode.cpp  OctreeLeafNode.hpp  OctreeNode.hpp  PointCloudNormalObject.hpp  PointCloudObject.hpp  PointXYZSIFT.hpp  SIFTObjectInstance.hpp  SIFTObjectModel.hpp  SIFTObjectModelFactory.hpp
tasks/: Bayes2.xml  BuildNetwork.xml  BuildNetworkTest.xml  Experiment2.xml  HomeTest.xml  MatcherTest.xml  OneFeature.xml  PC2OctreeTest.xml  SimpleEvaluation.xml  SimpleEvaluation2.xml  TestMatch.xml  TestMatch2.xml  TestMatch3.xml  TestMatchWrong.xml  home.xml
test/: BayesNetworkGenerator.cpp  BayesNetworkGenerator.hpp  BayesNetworkNodeTest.cpp  BayesNetworkTest.cpp  CMakeLists.txt  CPTManagerTest.cpp  CreateNetworkWithSpacialDependenciesTest.cpp  NetworkBuilderTest.cpp  OctreeBuilderTest.cpp  OctreeNodeTest.cpp  OctreeTest.cpp  PointCloudIndexerTest.cpp  SOMEvaluationIntegrationTest.cpp  SOMEvaluationTest.cpp  object_1_xyzrgb.pcd  object_1_xyzsift.pcd  test_cases.md  test_cloud.pcd
test/acceptance/: network_builder_acceptance_test.py  som_evaluation_acceptance_test.py
test/generators/: BayesNetworkSinkTest.cpp  CMakeLists.txt  OctreeGeneratorTest.cpp
test/integration/: CMakeLists.txt  NetworkBuilderIntegrationTest.cpp  SOMEvaluationIntegrationTest.cpp
test/unit/: BayesNetworkNodeTest.cpp  BayesNetworkTest.cpp  CMakeLists.txt  CPTManagerTest.cpp  NetworkBuilderTest.cpp  OctreeIteratorTest.cpp  OctreeNodeTest.cpp  OctreeTest.cpp  PointCloudIndexerTest.cpp  SIFTFeatureMatcherTest.cpp  SOMEvaluationTest.cpp
test/utils/: BayesNetworkGenerator.cpp  BayesNetworkGenerator.hpp  CMakeLists.txt  PointCloudGenerator.cpp  PointCloudGenerator.hpp
(+94 files in other folders)
