INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(utils)

create_test_suite(CPTManagerTest CPTManagerTest.cpp procNetworkBuilder)

create_test_suite(BayesNetworkTest BayesNetworkTest.cpp procNetworkBuilder)

create_test_suite(BayesNetworkNodeTest BayesNetworkNodeTest.cpp procNetworkBuilder)

create_test_suite(OctreeNodeTest OctreeNodeTest.cpp procNetworkBuilder)
target_link_libraries(OctreeNodeTest BayesNetworkTypes)

create_test_suite(OctreeTest OctreeTest.cpp BayesNetworkTypes)
file(COPY test_cloud.pcd DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

create_test_suite(NetworkBuilderTest NetworkBuilderTest.cpp procNetworkBuilder)
target_link_libraries(NetworkBuilderTest TestUtils)

create_test_suite(SOMEvaluationTest SOMEvaluationTest.cpp procSOMEvaluation)
target_link_libraries(SOMEvaluationTest procNetworkBuilder)

set(SOM_EVALUATION_INTEGRATION_TEST_SRC SOMEvaluationIntegrationTest.cpp BayesNetworkGenerator.cpp)
set(SOM_EVALUATION_INTEGRATION_TEST_LIB procSOMEvaluation procNetworkBuilder)
create_test_suite(SOMEvaluationIntegrationTest "${SOM_EVALUATION_INTEGRATION_TEST_SRC}" "${SOM_EVALUATION_INTEGRATION_TEST_LIB}")

create_test_suite(OctreeBuilderTest OctreeBuilderTest.cpp OctreeBuilder)
target_link_libraries(OctreeBuilderTest BayesNetworkTypes)

create_test_suite(PointCloudIndexerTest PointCloudIndexerTest.cpp procPointCloudIndexer)

#set(SIFT_FEATURE_MATCHER_TEST_SRC SIFTFeatureMatcherTest.cpp)
#set(SIFT_FEATURE_MATCHER_TEST_LIB procSIFTFeatureMatcher)
#create_test(SIFTFeatureMatcherTest ${SIFT_FEATURE_MATCHER_TEST_SRC} "${SIFT_FEATURE_MATCHER_TEST_LIB}")
